# ConstructorDialogicReasoning

./: .gitignore  README.md  check_llm_aliases.py  debug_contructor_adapter.py  endpoint_catalog_ascii.xml  generate_ascii_endpoints_xml.py  pyproject.toml
config/: cli_input_identification_review.xml  path.xml  testOpus.xml
llm_alias_check_direct/: llm_alias_check_results.csv  llm_alias_check_results.json  not_working_llm_aliases.txt  usable_llm_aliases.txt
llm_alias_check_output/: llm_alias_check_results.csv  llm_alias_check_results.json  not_working_llm_aliases.txt  usable_llm_aliases.txt
src/constructor_agent/: __init__.py  cli.py  config_loader.py  constructor_stateful_client.py  constructor_stateless_client.py  domain.py  graph_builder.py  langchain_constructor_model.py  platform_config.py  prompts.py  query_provider.py  runner.py  stateful_constructor_client.py  stateless_constructor_adapter_dialogic.py  stateless_constructor_client.py
