[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "constructor-agent-system"
version = "0.1.0"
description = "XML-defined LangGraph agent using ConstructorAdapter StatefulConstructorAdapter."
requires-python = ">=3.11"
dependencies = [
    "constructor_adapter>=0.3.4",
    "langchain-core>=0.3",
    "langgraph>=0.2",
    "pydantic>=2",
    "typer>=0.12",
    "rich>=13.7",
    "python-dotenv>=1.0",
    "requests>=2.31"
]

[project.scripts]
constructor-agent = "constructor_agent.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
